<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>urdfdom-headers</name>
  <version>1.0.0</version>
  <description>
    C++ headers for URDF.
  </description>
  <maintainer email="steven@openrobotics.org">Steven! Ragnarök</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>console_bridge</depend>
  <depend>tinyxml</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
